# mcp-prom-haskell

./: .gitignore  ADDITIONAL_ENDPOINTS.md  Dockerfile  LICENSE  MULTIARCH.md  Makefile  README.md  ROADMAP.md  claude-desktop-config.json  docker-compose.yml  mcp-prometheus-server.cabal  prometheus.yml  run-integration-tests.sh  test-error-handling.py  test-mcp-client.py  test-robustness.sh
.github/workflows/: docker-multiarch.yml
app/: Main.hs
src/MCP/: Server.hs  Types.hs
src/Prometheus/: Client.hs
test/: IntegrationSpec.hs  Spec.hs
test/MCP/: TypesSpec.hs
test/Prometheus/: ClientSpec.hs
